# MyRAG

./: .env.example  .gitignore  AGENTS.md  Dockerfile  RAG开发计划.md  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
.claude/: settings.local.json
.streamlit/: config.toml
data/vector_store/: chroma.sqlite3
src/api/: __init__.py  main.py  parser.py  routes.py  schemas.py
src/application/: __init__.py  rag_pipeline.py
src/core/: cache.py  config.py  exceptions.py  logger.py
src/data/: __init__.py  database.py  embedder.py  file_model.py  importer.py  vector_store.py
src/data/vector_store/: chroma.sqlite3
src/llm/: __init__.py  orchestrator.py
src/retrieval/: __init__.py  hybrid_retriever.py  query_processor.py
src/ui/: app.py
src/ui/templates/: index.html
tests/: conftest.py  test_api.py  test_config.py  test_retriever.py
