[project]
name = "myrag"
version = "0.1.0"
description = "基于大语言模型的 RAG 搜索补充系统"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MyRAG Team" }
]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # 前端
    "streamlit>=1.30.0",

    # 向量存储 - 使用最新版本
    "chromadb>=1.0.0",

    # 嵌入模型
    "sentence-transformers>=2.2.0",

    # LLM 客户端
    "openai>=1.10.0",
    "dashscope>=1.14.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",

    # 配置与日志
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",

    # 工具库
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0,<2",
    "requests>=2.31.0",

    # 检索相关
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",

    # 缓存
    "redis>=5.0.0",
]

[project.optional-dependencies]
all = [
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
